tests/cases/smoke/valid/typed_empty_var_then_assign.dp
var count: int
count = 1
