tests/cases/smoke/invalid/typed_empty_read_before_assign.dp
var count: int
print(count)
